unpackaged/main/default/objects/ProductRequired/ProductRequired.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>