unpackaged/main/default/objects/ProductRequired/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>Availability of the Product Required - On Shelf,1 Day, 2 day, Special order</description>
    <inlineHelpText>Availability of the Product Required - On Shelf,1 Day, 2 day, Special order</inlineHelpText>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Shelf</fullName>
            </value>
            <value>
                <fullName>1 Day</fullName>
            </value>
            <value>
                <fullName>2 day</fullName>
            </value>
            <value>
                <fullName>Special order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>