unpackaged/main/default/objects/ProductRequired/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <label>Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>