unpackaged/main/default/objects/ProductRequired/fields/Collection_Delivery_address__c.field-meta.xml
<CustomField>
    <fullName>Collection_Delivery_address__c</fullName>
    <description>E.g. Suppliers, Office, Operative Home, Customers</description>
    <inlineHelpText>E.g. Suppliers, Office, Operative Home, Customers</inlineHelpText>
    <label>Collection / Delivery address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suppliers</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Operative Home</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>