unpackaged/main/default/objects/ProductRequired/fields/Copy_Total_Markup_60__c.field-meta.xml
<CustomField>
    <fullName>Copy_Total_Markup_60__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Copy Total Markup 60%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>