unpackaged/main/default/objects/ProductRequired/fields/Count_Record__c.field-meta.xml
<CustomField>
    <fullName>Count_Record__c</fullName>
    <description>To check whether a Product Required is removed*</description>
    <label>Count Record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>