unpackaged/main/default/objects/ProductRequired/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Product Required - max 200 characters</description>
    <inlineHelpText>Description of the Product Required - max 200 characters</inlineHelpText>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>