unpackaged/main/default/objects/ProductRequired/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName>
    <description>This is the new field created to collect Descriptions of materials supplied by Operatives &amp; Aspect</description>
    <label>Full Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>