unpackaged/main/default/objects/ProductRequired/fields/Gross_Value_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Gross_Value_Incl_VAT__c</fullName>
    <description>Total Costs value with the VAT % added</description>
    <formula>Total_Markup_60__c  *(1+ VAT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Costs value with the VAT % added</inlineHelpText>
    <label>Gross Value (Incl. VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>