unpackaged/main/default/objects/ProductRequired/fields/image_link__c.field-meta.xml
<CustomField>
    <fullName>image_link__c</fullName>
    <formula>IMAGE( Image_ref__c ,&quot;image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>image_link</label>
    <type>Text</type>
</CustomField>