unpackaged/main/default/objects/ProductRequired/fields/Image_ref__c.field-meta.xml
<CustomField>
    <fullName>Image_ref__c</fullName>
    <label>Image_ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>