unpackaged/main/default/objects/ProductRequired/fields/Is_override__c.field-meta.xml
<CustomField>
    <fullName>Is_override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is override</label>
    <type>Checkbox</type>
</CustomField>