unpackaged/main/default/objects/ProductRequired/fields/Override_Mark_ups__c.field-meta.xml
<CustomField>
    <fullName>Override_Mark_ups__c</fullName>
    <label>Mark up %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>