unpackaged/main/default/objects/ProductRequired/fields/Part_number__c.field-meta.xml
<CustomField>
    <fullName>Part_number__c</fullName>
    <description>Number of the part</description>
    <inlineHelpText>Number of the part</inlineHelpText>
    <label>Part number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>