unpackaged/main/default/objects/ProductRequired/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Van Stock</fullName>
            </value>
            <value>
                <fullName>Scaffolding</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
            <value>
                <fullName>Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>