unpackaged/main/default/objects/ProductRequired/fields/Product_Charge_Includes_MarkUp__c.field-meta.xml
<CustomField>
    <fullName>Product_Charge_Includes_MarkUp__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Charge (Includes MarkUp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>