unpackaged/main/default/objects/ProductRequired/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <description>Material costs</description>
    <inlineHelpText>Material costs</inlineHelpText>
    <label>Product Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>