unpackaged/main/default/objects/ProductRequired/fields/Product_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Product_Lead_Time_Days__c</fullName>
    <description>Used where a PO is needed for this product, to enter the Supplier lead time for the product in question.</description>
    <inlineHelpText>If a PO is needed for this product, enter the Supplier lead time for the product in question.</inlineHelpText>
    <label>Product Lead Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>