unpackaged/main/default/objects/ProductRequired/fields/Product_MapName__c.field-meta.xml
<CustomField>
    <fullName>Product_MapName__c</fullName>
    <label>Product MapName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>