unpackaged/main/default/objects/ProductRequired/fields/Sourced_by_Aspect_or_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sourced_by_Aspect_or_Engineer__c</fullName>
    <description>Who got the product?</description>
    <inlineHelpText>Who got the product?</inlineHelpText>
    <label>Sourced by (Aspect or Engineer)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspect</fullName>
            </value>
            <value>
                <fullName>Operative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>