unpackaged/main/default/objects/ProductRequired/fields/Supplier_Details__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Details__c</fullName>
    <description>Used where a PO is needed for this product, to enter the name and postcode of the Supplier that will supply the product.</description>
    <inlineHelpText>If a PO is needed for this product, enter the name and postcode of the Supplier that will supply the product.</inlineHelpText>
    <label>Supplier Details</label>
    <type>TextArea</type>
</CustomField>