unpackaged/main/default/objects/ProductRequired/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <description>Name of the Supplier</description>
    <inlineHelpText>Name of the Supplier</inlineHelpText>
    <label>Supplier Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>