unpackaged/main/default/objects/ProductRequired/fields/Supplier_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Post_Code__c</fullName>
    <description>Supplier postcode</description>
    <inlineHelpText>Supplier postcode</inlineHelpText>
    <label>Supplier Post Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>