unpackaged/main/default/objects/ProductRequired/fields/Supplier_Product_Quote_Reference__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Product_Quote_Reference__c</fullName>
    <description>Used if a PO is needed for this product, to enter the Supplier product reference or quote reference.</description>
    <inlineHelpText>If a PO is needed for this product, enter the Supplier product reference or quote reference.</inlineHelpText>
    <label>Supplier Product/Quote Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>