unpackaged/main/default/objects/ProductRequired/fields/Total_Markup_60__c.field-meta.xml
<CustomField>
    <fullName>Total_Markup_60__c</fullName>
    <formula>Total_Costs__c + ( Total_Costs__c  *  Override_Mark_ups__c  / 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total with Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>